# Appel-d-offre-

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  tsconfig.tsbuildinfo
backend/: config.py  main.py  pyproject.toml
backend/ai/: analyzer.py  generator.py
backend/api/routes/: profile.py  responses.py  tenders.py
backend/database/: connection.py  models.py
backend/matching/: scorer.py
backend/notifications/: email.py  slack.py
backend/pipeline/: deduplicator.py  extractor.py  normalizer.py
backend/scrapers/: base.py  boamp.py  nerolia.py  place.py
backend/tasks/: scheduler.py
demo/: record.js
frontend/: package.json  tailwind.config.js
frontend/src/app/: globals.css  page.tsx
frontend/src/app/deck/: page.tsx
frontend/src/app/pricing/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/reponses/: page.tsx
frontend/src/components/: Sidebar.tsx  TenderCard.tsx
frontend/src/lib/: api.ts  mockData.ts
src/app/: layout.tsx  page.tsx
src/app/ao/[id]/: page.tsx
src/app/archive/: page.tsx
src/app/dashboard/: page.tsx
src/app/deck/: page.tsx
src/app/documents/: page.tsx
src/components/: HowItWorks.tsx  ScoreIndicator.tsx
